Version 2.1.0
---------------------------------------------------------------------------------
30 May 2008
+ Error check added to resize function.
+ Rewrote image resizing to avoid square images.

23 May 2008
+ Filecabinet will now resize media as well as images.
+ Added type to javascript scripts
+ Updated: javascript/pick_file/head.js,
           javascript/pick_file/scripts.js
           javascript/update_file/head.js


21 May 2008
+ When checking the mime type, the extension is forced into lowercase.

29 April 2008
+ Hiding some elements if the user doesn't have file rights.
+ Updated: templates/file_manager/placeholder.tpl

25 April 2008
+ Fixed typo in Image:makeThumbnail
+ Added ability to move files to other folders.
+ Updated: templates/document_edit.tpl, templates/image_edit.tpl,
  templates/multimedia_edit.tpl 

24 April 2008
+ Revamped embedded code
+ Added flicker slide shows.
+ Fixed module restrictions on folders (I think)
+ Updated: templates/edit_folder.tpl, templates/embed_edit.tpl
+ Removed: templates/filters/youtube.tpl, inc/embed/youtube.php

17 April 2008
+ Can change module restriction per folder.
+ Added moduleLimit function to restrict folder view in file manager.
+ Some notices fixed
+ Updated: templates/edit_folder.tpl

11 April 2008
+ Image folders can be set to control default image default size.
+ Fixed an error call.
+ Updated: templates/edit_folder.tpl, templates/style.css

9 April 2008
+ Popup images can be set to navigate among other images in the
  folder.
+ getThumbnail handles a resized image now.
+ Popup windows all the same size.
+ Update: templates/image_view.tpl, templates/settings.tpl

8 April 2008
+ Added getThumbnail function to File_Assoc
+ Image's getThumbnail can be linkable.
+ Increased default thumbnail size slightly.

Version 2.0.1
----------------------------------------------------------------
2 April 2008
+ Updated youTube import.
+ Removed unused code.

Version 2.0.0